# tempi

./: .gitignore  AUTHORS  BUGS  HACKING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  debug  debug-miller.sh  debug.sh  doxyfile.in  gentypes.sh  run  stk.pc  tempi.pc.in
examples/particules/: README  TODO  autogen.sh  base_application.h  config.h  configure.ac  ogre.cfg  particles_application.cpp  particles_application.h  plugins.cfg  purplefountain.particle
man/: Makefile.am  man-midi-print.txt  man-midilooper.txt  man-osc-forward.txt  man-tempi-draw.txt  man-tempi-inspect.txt  man-tempi-launch.txt  man-tempi-midi-looper.txt  man-tempi-osc-forward.txt  man-tempi-osc-looper.txt
plugins-base/: Makefile.am  baselibrary.cpp  baselibrary.h
plugins-base/3d/: 3dcomparenode.cpp  3dcomparenode.h
plugins-base/abstraction/: abstractionnode.cpp  abstractionnode.h  inletnode.cpp  inletnode.h  outletnode.cpp  outletnode.h
plugins-base/clutter/: clutterhello.cpp  clutterhello.h  clutterstagenode.cpp  clutterstagenode.h
plugins-base/convert/: booltointnode.cpp  booltointnode.h
plugins-base/edit/: grapheditornode.cpp  grapheditornode.h
plugins-base/flow/: anynode.cpp  anynode.h  appendnode.h  appsinknode.cpp  appsinknode.h  castnode.h  changenode.cpp  changenode.h  counternode.cpp  counternode.h  delaynode.cpp  delaynode.h  demuxnode.cpp  demuxnode.h  dictnode.h  linenode.cpp  linenode.h  loadmessnode.cpp  loadmessnode.h  logger_node.cpp  logger_node.h  metro_node.cpp  metro_node.h  nop_node.cpp  nop_node.h  packnode.cpp  packnode.h  prependnode.cpp  prependnode.h  print_node.cpp  print_node.h  receivenode.cpp  receivenode.h  routenode.cpp  routenode.h  send_and_receive_nodes.cpp  send_and_receive_nodes.h  speedlimnode.cpp  speedlimnode.h  spigotnode.cpp  (+9 more)
plugins-base/list/: pick_indices.cpp  pick_indices.h
plugins-base/mapper/: mapperdevice.h  mapperinputnode.cpp  mapperinputnode.h
plugins-base/mapping/: average.h  filter.cpp  filter.h  slide.cpp  slide.h  slidefilter.cpp  slidefilter.h
plugins-base/math/: abstract_math_node.cpp  abstract_math_node.h  ae.cpp  ae.h  booleanoperatornode.cpp  booleanoperatornode.h  expr.cpp  expr.h  jsexpr.cpp  jsexpr.h  lmathx.cpp  lmathx.h  luaexpr.cpp  luaexpr.h  mathnodes.h  onefloatmathnode.cpp  onefloatmathnode.h  twofloatmathnode.cpp  twofloatmathnode.h
plugins-base/midi/: abstractmidifilter.cpp  abstractmidifilter.h  midibuildernodes.cpp  midibuildernodes.h  mididevicelistermethod.cpp  mididevicelistermethod.h  midireceivernode.cpp  midireceivernode.h  midiroutenode.cpp  midiroutenode.h  midisendernode.cpp  midisendernode.h  midiutilities.cpp  midiutilities.h
plugins-base/music/: monodicnode.cpp  monodicnode.h  musicnearestnode.h
plugins-base/os/: shellnode.cpp  shellnode.h
plugins-base/osc/: oscprependnode.cpp  oscprependnode.h  oscreceivernode.cpp  oscreceivernode.h  oscroutenode.cpp  oscroutenode.h  oscsendernode.cpp  oscsendernode.h
plugins-base/random/: drunkint.cpp  drunkint.h  randomdrunknode.h  randomintnode.h
plugins-base/sampler/: samplenode.cpp  samplenode.h  samplernode.cpp  samplernode.h  samplerreadnode.cpp  samplerreadnode.h  samplerwritenode.cpp  samplerwritenode.h
plugins-base/serial/: blobtobytes.cpp  blobtobytes.h  blobutils.cpp  blobutils.h  bytestoblobnode.cpp  bytestoblobnode.h  serialdevice.cpp  serialdevice.h  serialdevicenode.cpp  serialdevicenode.h  todmxusbpro.cpp  todmxusbpro.h
plugins-base/spatosc/: spatoscnode.h
plugins-base/string/: stringcharactersnode.cpp  stringcharactersnode.h  stringjoinnode.cpp  stringjoinnode.h  stringsplitnode.cpp  stringsplitnode.h
plugins-base/tests/: Makefile.am  check_base.cpp  check_line.cpp  check_math.cpp
plugins-base/time/: clock_node.cpp  clock_node.h  cron.cpp  cron.h  cron_node.cpp  cron_node.h  date_node.cpp  date_node.h  delaynode.cpp  delaynode.h  metro_node.cpp  timernode.cpp  timernode.h
prototypes/qt-gui/: CMakeLists.txt  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  main.cpp  miller.ui  node.cpp  node.h
python_module/: Makefile  Makefile.am  example-scene.py  example.py  osc2midi.py  osceleton.py  python-tempi.cpp  tempy.py
src/: Makefile.am  gui.cpp  gui.h  legacy.h  main.cpp  particlegenerator.cpp  particlegenerator.h  player.h  recorder.cpp  recorder.h  sampler.cpp  sampler.h  send_test_osc_messages.sh
src/midi-print/: Makefile.am  main.cpp
src/midi_looper/: main.cpp
src/midi_print/: main.cpp
src/midilooper/: Makefile.am  build.sh  main.cpp  threadedscheduler.cpp
src/miller/: Makefile.am  main.cpp  miller-command.h  miller-connection.c  miller-connection.h  miller-draw.cpp  miller-macros.h
src/osc-forward/: Makefile.am  main.cpp
src/osc_forward/: main.cpp
src/tempi-draw/: Makefile.am  legacy.h  main.cpp  particlegenerator.cpp  particlegenerator.h  sampler.cpp  sampler.h
src/tempi-graph-viewer/: Makefile.am  main.cpp  miller-connection.h  miller-draw.cpp  miller-draw.h  miller-macros.h
src/tempi-inspect/: Makefile.am  main.cpp
src/tempi-launch/: Makefile.am  main.cpp
src/tempi-midi-looper/: main.cpp  (+2 more)
tempi/: Makefile.am  attribute.cpp  attribute.h  build_python_wrapper.sh  concurrentqueue.h  dict.cpp  dict.h  documented.cpp  documented.h  dynamicpatching.cpp  dynamicpatching.h  entity.cpp  entity.h  entitymethod.cpp  entitymethod.h  entitysignal.cpp  entitysignal.h  exceptions.h  filter.cpp  filter.h  fsm_rule.cpp  fsm_rule.h  fsm_state.cpp  fsm_state.h  fsm_statemachine.cpp  fsm_statemachine.h  graph.cpp  graph.h  identifier.h  inlet.cpp  inlet.h  install_python_wrapper.sh  internals.cpp  internals.h  keyframe.h  library.h  loader.cpp  loader.h  log.cpp  log.h  (+127 more)
tests/: Makefile.am  build_check_namedobjectmap.sh  check_average.cpp  check_base.cpp  check_fsm.cpp  check_graph.cpp  check_libraries.cpp  check_loader.cpp  check_log.cpp  check_math.cpp  check_message.cpp  check_nameobjectmap.cpp  check_node.cpp  check_nodefactory.cpp  check_osc.cpp  check_osc_nodes.cpp  check_properties.cpp  check_serializer.cpp  check_slide.cpp  check_table.cpp  check_timer.cpp  check_track.cpp  check_version.cpp
(+323 files in other folders)
